// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inject highlight wrappers for figure with caption for highlight ending on an <img> in chrome and safari 1`] = `
<mark
  class="highlight first text yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  hardware store sells 16-ft ladders and 24-ft ladders. A window is located 12 feet above the ground. A ladder needs to be purchased that will reach the window from a point on the ground 5 feet from the building.
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight ending on an <img> in chrome and safari 2`] = `
<mark
  class="highlight block last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight ending on an <img> in firefox 1`] = `
<mark
  class="highlight first text yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  hardware store sells 16-ft ladders and 24-ft ladders. A window is located 12 feet above the ground. A ladder needs to be purchased that will reach the window from a point on the ground 5 feet from the building.
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight ending on an <img> in firefox 2`] = `
<mark
  class="highlight block last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting and ending on an <img> in chrome and safari 1`] = `
<mark
  class="highlight first block last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting and ending on an <img> in firefox 1`] = `
<mark
  class="highlight first block last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> in chrome and safari 1`] = `
<mark
  class="highlight first block yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
  tabindex="0"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> in chrome and safari 2`] = `
<mark
  class="highlight text last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  Figure
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> in firefox 1`] = `
<mark
  class="highlight first block yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> in firefox 2`] = `
<mark
  class="highlight text last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  Figure
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> where img is first element on page in chrome 1`] = `
<mark
  class="highlight first block last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> where img is first element on page in firefox 1`] = `
<mark
  class="highlight first block last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</mark>
`;

exports[`inject highlight wrappers for figure with caption for highlight starting on an <img> where img is first element on page in safari 1`] = `
<mark
  class="highlight first block last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  <img
    alt="A right triangle with a base of 5 feet, a height of 12 feet, and a hypotenuse labeled c"
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/b1b5ba97150addc831c534413ca324a72c4e374b"
  />
</mark>
`;

exports[`inject highlight wrappers for img between paragraphs in chrome and safari 1`] = `
<mark
  class="highlight first text yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  the first terms, the outer terms, the inner terms, and then the last terms of each binomial.
</mark>
`;

exports[`inject highlight wrappers for img between paragraphs in chrome and safari 2`] = `
<mark
  class="highlight block last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <img
    alt="Two quantities in parentheses are being multiplied, the first being: a times x plus b and the second being: c times x plus d."
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/eb942bf030580de7cb1d8c7d484771addceb7da6"
  />
</mark>
`;

exports[`inject highlight wrappers for img between paragraphs in firefox 1`] = `
<mark
  class="highlight first text yellow"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  the first terms, the outer terms, the inner terms, and then the last terms of each binomial.
</mark>
`;

exports[`inject highlight wrappers for img between paragraphs in firefox 2`] = `
<mark
  class="highlight block last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
>
  <img
    alt="Two quantities in parentheses are being multiplied, the first being: a times x plus b and the second being: c times x plus d."
    data-media-type="image/jpg"
    id="test-img"
    src="/apps/archive/20210713.205645/resources/eb942bf030580de7cb1d8c7d484771addceb7da6"
  />
</mark>
`;

exports[`inject highlight wrappers for text followed by section in chrome and safari 1`] = `
<mark
  class="highlight first text last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  How To
</mark>
`;

exports[`inject highlight wrappers for text followed by section in firefox 1`] = `
<mark
  class="highlight first text last yellow"
  data-end-message="End of highlight"
  data-highlight-id="some-highlight"
  data-highlighted="true"
  data-start-message="Start of highlight"
>
  How To
</mark>
`;
